Solved some bugs related to the search and added some improvements