@@ -46,27 +46,30 @@ class EventServiceTest {
     void testSortEvents_CompoundScoringWithUserFilters() {
         Integer userId = 1;
         String query = "sushi";
-        Coordinates userCoords = new Coordinates(45.0, 25.0);
+        BigDecimal lat = BigDecimal.valueOf(45.0);
+        BigDecimal lng = BigDecimal.valueOf(25.0);
+        Double maxDistance = 50.0;
+        Integer maxDays = 30;
+        LocalDateTime now = LocalDateTime.now();
 
-        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1, 4, 5));
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(1, 2, 3));
 
         Event eventA = new Event();
         eventA.setId(101);
         eventA.setName("Event A");
-        eventA.setLocation(new com.soccialy.backend.entity.Location(1, "Loc 1", new BigDecimal("0"), new BigDecimal("0"),null, null, null)); // Updated for the real Location entity
-        eventA.setScheduledDate(LocalDateTime.now().plusDays(1));
+        eventA.setLocation(new Location(1, "Loc 1", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
+        eventA.setScheduledDate(now.plusDays(1));
         eventA.setFilterIds(List.of(1, 2));
 
         Event eventB = new Event();
         eventB.setId(102);
         eventB.setName("Event B");
-        eventB.setLocation(new com.soccialy.backend.entity.Location(2, "Loc 2", new BigDecimal("0"), new BigDecimal("0"), null, null, null)); // Updated for the real Location entity
-        eventB.setScheduledDate(LocalDateTime.now().plusDays(20));
+        eventB.setLocation(new Location(2, "Loc 2", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
+        eventB.setScheduledDate(now.plusDays(20));
         eventB.setFilterIds(List.of(4, 10));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class)))
                 .thenReturn(new ArrayList<>(List.of(eventA, eventB)));
 
         Map<Integer, List<Integer>> mockLocationFilters = new HashMap<>();
@@ -77,12 +80,9 @@ class EventServiceTest {
         Map<Integer, Double> mockDistances = new HashMap<>();
         mockDistances.put(1, 5.0);
         mockDistances.put(2, 40.0);
-        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(mockDistances);
+        when(aiServiceClient.getDistances(any(Coordinates.class), anyMap())).thenReturn(mockDistances);
 
-        Double maxDistance = 50.0;
-        Integer maxDays = 30;
-
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, maxDistance, maxDays, now, lat, lng);
 
         assertEquals(2, results.size(), "Should return exactly 2 results");
         assertEquals(101, results.get(0).getId(), "Event A should be ranked first");
@@ -98,35 +98,36 @@ class EventServiceTest {
         String query = "coffee";
         Double maxDistance = 10.0;
         Integer maxDays = 7;
-        Coordinates userCoords = new Coordinates(45.0, 25.0);
+        BigDecimal lat = BigDecimal.valueOf(45.0);
+        BigDecimal lng = BigDecimal.valueOf(25.0);
+        LocalDateTime now = LocalDateTime.now();
 
-        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1));
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(2));
 
         Event eventA = new Event();
         eventA.setId(1);
-        eventA.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        eventA.setLocation(new Location(1, "Loc", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
         eventA.setFilterIds(List.of(1, 2));
-        eventA.setScheduledDate(LocalDateTime.now().plusDays(3));
+        eventA.setScheduledDate(now.plusDays(3));
 
         Event eventB = new Event();
         eventB.setId(2);
-        eventB.setLocation(new com.soccialy.backend.entity.Location(2, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        eventB.setLocation(new Location(2, "Loc", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
         eventB.setFilterIds(List.of(1, 2));
-        eventB.setScheduledDate(LocalDateTime.now().plusDays(10));
+        eventB.setScheduledDate(now.plusDays(10));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(Arrays.asList(eventA, eventB));
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class)))
+                .thenReturn(new ArrayList<>(List.of(eventA, eventB)));
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
-        
+
         Map<Integer, Double> mockDistances = Map.of(1, 5.0, 2, 15.0);
-        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(mockDistances);
+        when(aiServiceClient.getDistances(any(Coordinates.class), anyMap())).thenReturn(mockDistances);
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, maxDistance, maxDays, now, lat, lng);
 
-        assertEquals(2, results.size());
+        assertEquals(1, results.size(), "Event B should be filtered out strictly by maxDays");
         assertEquals(1, results.get(0).getId(), "Event A should be first because it is inside the dynamic bounds");
-        assertEquals(2, results.get(1).getId(), "Event B should be last because it scores 0 on both distance and time");
     }
 
     @Test
@@ -135,22 +136,23 @@ class EventServiceTest {
         String query = "coffee";
         Double maxDistance = 50.0;
         Integer maxDays = 30;
-        Coordinates userCoords = new Coordinates(45.0, 25.0);
+        BigDecimal lat = BigDecimal.valueOf(45.0);
+        BigDecimal lng = BigDecimal.valueOf(25.0);
+        LocalDateTime now = LocalDateTime.now();
 
-        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
 
         Event event = new Event();
         event.setId(1);
-        event.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
-        event.setScheduledDate(LocalDateTime.now().plusDays(15));
+        event.setLocation(new Location(1, "Loc", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
+        event.setScheduledDate(now.plusDays(15));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class))).thenReturn(new ArrayList<>(List.of(event)));
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
-        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(Map.of(1, 0.0));
+        when(aiServiceClient.getDistances(any(Coordinates.class), anyMap())).thenReturn(Map.of(1, 0.0));
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, maxDistance, maxDays, now, lat, lng);
 
         assertEquals(1, results.size());
     }
@@ -161,21 +163,21 @@ class EventServiceTest {
         String query = "coffee";
         Double maxDistance = 100.0;
         Integer maxDays = 30;
+        LocalDateTime now = LocalDateTime.now();
 
-        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
 
         Event event = new Event();
         event.setId(99);
-        event.setLocation(new com.soccialy.backend.entity.Location(99, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
-        event.setScheduledDate(LocalDateTime.now());
+        event.setLocation(new Location(99, "Loc", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
+        event.setScheduledDate(now);
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class))).thenReturn(new ArrayList<>(List.of(event)));
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
-        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(new HashMap<>());
+        when(aiServiceClient.getDistances(any(), anyMap())).thenReturn(new HashMap<>());
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, maxDistance, maxDays, now, BigDecimal.ZERO, BigDecimal.ZERO);
 
         assertEquals(1, results.size());
         assertEquals(99, results.get(0).getId());
@@ -185,21 +187,22 @@ class EventServiceTest {
     void testSortEvents_NoFilters_ReturnsPerfectFilterScore() {
         Integer userId = 1;
         String query = "";
-        
-        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
+        LocalDateTime now = LocalDateTime.now();
+
         when(userService.getUserProfileFilters(userId)).thenReturn(new ArrayList<>());
         when(aiServiceClient.getSearchFilters(query)).thenReturn(new ArrayList<>());
 
         Event event = new Event();
         event.setId(1);
-        event.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        event.setLocation(new Location(1, "Loc", BigDecimal.ZERO, BigDecimal.ZERO, null, null, null));
         event.setFilterIds(List.of(5, 6, 7));
+        event.setScheduledDate(now.plusDays(5));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class))).thenReturn(new ArrayList<>(List.of(event)));
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
-        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(Map.of(1, 5.0));
+        when(aiServiceClient.getDistances(any(), anyMap())).thenReturn(Map.of(1, 5.0));
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, 50.0, 30, now, BigDecimal.ZERO, BigDecimal.ZERO);
 
         assertEquals(1, results.size());
         assertEquals(1, results.get(0).getId());
@@ -209,15 +212,15 @@ class EventServiceTest {
     void testSortEvents_NoCandidatesFound_ReturnsEmptyList() {
         Integer userId = 1;
         String query = "something obscure";
+        LocalDateTime now = LocalDateTime.now();
 
-        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1));
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(2));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class)))
                 .thenReturn(new ArrayList<>());
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, 50.0, 30, now, BigDecimal.ZERO, BigDecimal.ZERO);
 
         assertEquals(0, results.size());
     }
@@ -227,42 +230,37 @@ class EventServiceTest {
         Integer userId = 1;
         String query = "boundary";
         LocalDateTime now = LocalDateTime.now();
-        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
 
-        // Event 1: Distance > maxDistance
         Event e1 = new Event();
         e1.setId(10); e1.setName("Far Event");
         Location l1 = new Location(); l1.setId(100); e1.setLocation(l1);
         e1.setScheduledDate(now.plusDays(1));
 
-        // Event 2: ScheduledDate in the past
         Event e2 = new Event();
         e2.setId(11); e2.setName("Past Event");
         Location l2 = new Location(); l2.setId(101); e2.setLocation(l2);
         e2.setScheduledDate(now.minusDays(1));
 
-        // Event 3: ScheduledDate is null
         Event e3 = new Event();
         e3.setId(12); e3.setName("No Date Event");
         Location l3 = new Location(); l3.setId(102); e3.setLocation(l3);
         e3.setScheduledDate(null);
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList(), any(LocalDateTime.class)))
                 .thenReturn(new ArrayList<>(List.of(e1, e2, e3)));
 
         Map<Integer, Double> distances = new HashMap<>();
-        distances.put(100, 60.0); // > 50.0
+        distances.put(100, 60.0);
         distances.put(101, 10.0);
         distances.put(102, 10.0);
 
-        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(distances);
+        when(aiServiceClient.getDistances(any(), anyMap())).thenReturn(distances);
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
 
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, null, 50.0, 30, now, BigDecimal.ZERO, BigDecimal.ZERO);
 
         assertEquals(3, results.size());
     }
-
 }
